--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Source Code Pro";
     height: 100vh;
@@ -21,8 +20,6 @@ h1 {
     gap: 20px;
 
 }
-
-
 
 .input-container {
     display: flex;
@@ -117,6 +114,12 @@ select {
 
 /* Mobile styles */
 @media (max-width: 768px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
     body {
         width: 100%;
         min-height: 100vh;
@@ -125,7 +128,7 @@ select {
     }
 
     h1 {
-        font-size: 36px;
+        font-size: 32px;
         text-align: center;
     }
 
@@ -140,7 +143,7 @@ select {
         flex-direction: column;
         width: 100%;
         gap: 15px;
-        align-items: center;  /* Center the whole thing */
+        align-items: center; 
     }
 
     .input-wrapper {
@@ -159,7 +162,7 @@ select {
     }
 
     input {
-        width: 200px;  
+        width: 100%;  
         padding-right: 110px;
     }
     
@@ -180,9 +183,6 @@ select {
 
 /* Extra small screens */
 @media (max-width: 480px) {
-    h1 {
-        font-size: 26px;
-    }
 
     .container {
         padding: 30px 20px;
@@ -191,7 +191,7 @@ select {
     }
 
     input {
-        width: 200px;
+        width: 100%;
         font-size: 20px;
         height: 60px;
     }
